@@ -37,5 +37,8 @@
     <setting type="sep" />
     <setting id="RR_SPOTIFY_BRANCH"      type="select" label="30402" values="stable|dev" default="stable"/>
     <setting id="RR_SPOTIFY_CLEAN_CACHE" type="bool"   label="30403"                     default="false"/>
+    <setting label="30410" type="lsep"/>
+    <setting type="sep" />
+    <setting id="RR_BRAVE_TEST_TYPE"     type="bool"   label="30411"                     default="false"/>
   </category>
 </settings>
